Improve to string and logging